tests/paczka2/big_fuzzy/19316128.err
Error in line 3: 1WtPPG07BD At06 40,2
Error in line 6: A768 A796 19,6
Error in line 9: A768 A776 66,0
Error in line 21: AWbh A7Y6 41,6
Error in line 24: jQFZ A768 5,2
Error in line 17: 1W9PPG07BD A768 22,1
Error in line 30: oxiqyUq7 A776 78,9
Error in line 37: oxiqyUq7 A768 41,3
Error in line 33: jQFZ A796 12,9
Error in line 47: AWbh A796 11,6
Error in line 50: jxFbU7X A906 51,3
Error in line 64: AWbh A776 53,8
Error in line 75: A768 A796 374,24
Error in line 78: oxiqyUq7 A776 68,3
Error in line 84: oxiqyUq7 A796 19,7
Error in line 92: jxFbUmX Am68 43,4
Error in line 35: 1W9PPG07BD A776 107,8
Error in line 100: 1W9PPG07BD A906 61,7
Error in line 103: oxiqyUq7 A776 52,0
Error in line 70: A768 A796 95,5
Error in line 104: jQFZ A796 27,9
Error in line 128: jQFZ A768 36,4
Error in line 160: A768 A768 212,9
Error in line 166: 1W9PPGD7BD A9D6 241,6
Error in line 171: oxiqyUq7 A906 54,1
Error in line 172: jxFbU7X A796 25,6
Error in line 174: oxiqyUq7 A776 11,7
Error in line 185: jQFZ A796 84,1
Error in line 178: oxiqyUq7 A906 84,3
Error in line 187: oxiqyUq7 A768 89,8
Error in line 196: oxiqyUq7 A776 34,1
Error in line 199: AWbh A906 42,7
Error in line 198: oxiqyUq7 A906 57,5
Error in line 204: AWbh A796 92,8
Error in line 232: AWbh A776 76,9
Error in line 234: AWbh A796 47,8
Error in line 235: 5HfJ A796 52,7
Error in line 237: oxiqyUq7 A906 60,6
Error in line 247: AWbh A796 20,3
